Created light/dark theme toggle  for the web page

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en-us">
   <head>
     <meta charset="utf-8">
-
-    <title>Image gallery</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    
+    <script src="main.js" defer></script>
+    <title>Image gallery</title>
   </head>
 
   <body>
@@ -22,6 +22,10 @@
 
 
     </div>
-    <script src="main.js"></script>
+
+    <input type="checkbox" class="input" id="dark-mode"/>
+    <label for="dark-mode" class="label">
+      <div class="circle"></div> <!-- source code uses div here instead-->
+    </label>    
   </body>
 </html>
